depends_core/src/macros/dependee/snapshots/depends_core__macros__dependee__derive__tests__dependee.snap
---
source: depends_core/src/macros/dependee/derive.rs
assertion_line: 190
expression: format_source(derive_dependee(input).to_string().as_str())
---
pub struct SomeName {
    dependencies: SomeType,
    data: ::std::cell::RefCell<::depends::core::NodeState<Foo>>,
    id: usize,
}
impl SomeName {
    pub fn new(dependencies: SomeType, data: Foo) -> ::std::sync::Arc<SomeName> {
        Self::new_with_id(dependencies, data, ::depends::core::next_node_id())
    }

    pub fn new_with_id(dependencies: SomeType, data: Foo, id: usize) -> ::std::sync::Arc<SomeName> {
        ::std::sync::Arc::new(SomeName {
            dependencies,
            data: ::std::cell::RefCell::new(::depends::core::NodeState::new_dependee(data)),
            id,
        })
    }
}
impl ::depends::core::Identifiable for SomeName {
    fn id(&self) -> usize {
        self.id
    }
}
impl Foo {
    pub fn into_node(self, dependencies: SomeType) -> ::std::sync::Arc<SomeName> {
        SomeName::new(dependencies, self)
    }
}
impl ::depends::core::Named for Foo {
    fn name() -> &'static str {
        "Foo"
    }
}
impl ::depends::core::Named for SomeName {
    fn name() -> &'static str {
        Foo::name()
    }
}
impl ::depends::core::Depends for Foo {
    type Input < 'a > = < SomeType as :: depends :: core :: Resolve > :: Output < 'a > where Self : 'a ;
}
impl ::depends::core::Resolve for SomeName {
    type Output < 'a > = :: std :: cell :: Ref < 'a , :: depends :: core :: NodeState < Foo >> where Self : 'a ;

    fn resolve(&self, visitor: &mut impl ::depends::core::Visitor) -> Self::Output<'_> {
        use ::depends::core::{Clean, IsDirty};
        use ::std::ops::DerefMut;
        visitor.touch(self);
        if visitor.visit(self) {
            let input = self.dependencies.resolve(visitor);
            if input.is_dirty() {
                let mut node_state = self.data.borrow_mut();
                node_state.clean();
                node_state.deref_mut().update_mut(input);
                node_state.update_node_hash(&mut visitor.hasher());
            }
        }
        visitor.leave(self);
        self.data.borrow()
    }
}
impl ::depends::core::HashValue for Foo {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}
impl ::depends::core::Clean for Foo {
    fn clean(&mut self) {}
}

